content/_generated-doc/3.8/config/quarkus-vertx-http-config-group-management-management-runtime-auth-config.adoc

:summaryTableId: quarkus-vertx-http-config-group-management-management-runtime-auth-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-vertx-http-config-group-management-management-runtime-auth-config_configuration]]link:#quarkus-vertx-http-config-group-management-management-runtime-auth-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-permission-permissions-enabled]]`link:#quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-permission-permissions-enabled[quarkus.management.auth.permission."permissions".enabled]`


[.description]
--
Determines whether the entire permission set is enabled, or not. By default, if the permission set is defined, it is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-permission-permissions-policy]]`link:#quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-permission-permissions-policy[quarkus.management.auth.permission."permissions".policy]`


[.description]
--
The HTTP policy that this permission set is linked to. There are three built-in policies: permit, deny and authenticated. Role based policies can be defined, and extensions can add their own policies.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__POLICY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__POLICY+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-permission-permissions-methods]]`link:#quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-permission-permissions-methods[quarkus.management.auth.permission."permissions".methods]`


[.description]
--
The methods that this permission set applies to. If this is not set then they apply to all methods. Note that if a request matches any path from any permission set, but does not match the constraint due to the method not being listed then the request will be denied. Method specific permissions take precedence over matches that do not have any methods set. This means that for example if Quarkus is configured to allow GET and POST requests to /admin to and no other permissions are configured PUT requests to /admin will be denied.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__METHODS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__METHODS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-permission-permissions-paths]]`link:#quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-permission-permissions-paths[quarkus.management.auth.permission."permissions".paths]`


[.description]
--
The paths that this permission check applies to. If the path ends in /++*++ then this is treated as a path prefix, otherwise it is treated as an exact match. Matches are done on a length basis, so the most specific path match takes precedence. If multiple permission sets match the same path then explicit methods matches take precedence over matches without methods set, otherwise the most restrictive permissions are applied.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__PATHS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__PATHS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-permission-permissions-auth-mechanism]]`link:#quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-permission-permissions-auth-mechanism[quarkus.management.auth.permission."permissions".auth-mechanism]`


[.description]
--
Path specific authentication mechanism which must be used to authenticate a user. It needs to match `HttpCredentialTransport` authentication scheme such as 'basic', 'bearer', 'form', etc.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__AUTH_MECHANISM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__AUTH_MECHANISM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-permission-permissions-shared]]`link:#quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-permission-permissions-shared[quarkus.management.auth.permission."permissions".shared]`


[.description]
--
Indicates that this policy always applies to the matched paths in addition to the policy with a winning path. Avoid creating more than one shared policy to minimize the performance impact.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__SHARED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__SHARED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-policy-role-policy-roles-allowed]]`link:#quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-policy-role-policy-roles-allowed[quarkus.management.auth.policy."role-policy".roles-allowed]`


[.description]
--
The roles that are allowed to access resources protected by this policy. By default, access is allowed to any authenticated user.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_POLICY__ROLE_POLICY__ROLES_ALLOWED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_POLICY__ROLE_POLICY__ROLES_ALLOWED+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`**`


a| [[quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-policy-role-policy-roles-role1]]`link:#quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-policy-role-policy-roles-role1[quarkus.management.auth.policy."role-policy".roles]`


[.description]
--
Add roles granted to the `SecurityIdentity` based on the roles that the `SecurityIdentity` already have. For example, the Quarkus OIDC extension can map roles from the verified JWT access token, and you may want to remap them to a deployment specific roles.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_POLICY__ROLE_POLICY__ROLES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_POLICY__ROLE_POLICY__ROLES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,List<String>>` 
|


a| [[quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-policy-role-policy-permissions-role1]]`link:#quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-policy-role-policy-permissions-role1[quarkus.management.auth.policy."role-policy".permissions]`


[.description]
--
Permissions granted to the `SecurityIdentity` if this policy is applied successfully (the policy allows request to proceed) and the authenticated request has required role. For example, you can map permission `perm1` with actions `action1` and `action2` to role `admin` by setting `quarkus.http.auth.policy.role-policy1.permissions.admin=perm1:action1,perm1:action2` configuration property. Granted permissions are used for authorization with the `@PermissionsAllowed` annotation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_POLICY__ROLE_POLICY__PERMISSIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_POLICY__ROLE_POLICY__PERMISSIONS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,List<String>>` 
|


a| [[quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-policy-role-policy-permission-class]]`link:#quarkus-vertx-http-config-group-management-management-runtime-auth-config_quarkus-management-auth-policy-role-policy-permission-class[quarkus.management.auth.policy."role-policy".permission-class]`


[.description]
--
Permissions granted by this policy will be created with a `java.security.Permission` implementation specified by this configuration property. The permission class must declare exactly one constructor that accepts permission name (`String`) or permission name and actions (`String`, `String++[]++`). Permission class must be registered for reflection if you run your application in a native mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_POLICY__ROLE_POLICY__PERMISSION_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_POLICY__ROLE_POLICY__PERMISSION_CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|`io.quarkus.security.StringPermission`

|===